updated repository name in composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "setsuna-/libido",
+    "name": "alexhenriet/libido",
     "description": "General purpose PHP library that I do, hence the name.",
     "type": "library",
     "license": "MIT",
